feat: 🎸 replace with j2objc compatible java API